Added Syntax Highlighting for codes using pygments, partial file for code in answers/questions created

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-asgiref
-Babel
-Django
-django-phonenumber-field
-djangorestframework
-phonenumbers
-Pillow
-psycopg2
-python-dotenv
-pytz
-sqlparse
+asgiref==3.6.0
+Babel==2.12.1
+Django==4.2
+django-phonenumber-field==7.0.2
+djangorestframework==3.14.0
+phonenumbers==8.13.10
+Pillow==9.5.0
+psycopg2==2.9.6
+Pygments==2.15.1
+python-dotenv==1.0.0
+pytz==2023.3
+sqlparse==0.4.4
