--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
 asgiref==3.6.0
+asttokens==2.2.1
 Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+decorator==5.1.1
 Django==4.2
 django-phonenumber-field==7.0.2
+django-pygmentify==0.3.7
 djangorestframework==3.14.0
+executing==1.2.0
+ipython==8.14.0
+jedi==0.18.2
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
 phonenumbers==8.13.10
+pickleshare==0.7.5
 Pillow==9.5.0
+prompt-toolkit==3.0.38
 psycopg2==2.9.6
-Pygments==2.15.1
+ptyprocess==0.7.0
+pure-eval==0.2.2
 python-dotenv==1.0.0
 pytz==2023.3
+six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
+stack-data==0.6.2
+traitlets==5.9.0
+wcwidth==0.2.6
